# Veamy

./: .gitignore  CMakeLists.txt  README.md
lib/mesher/lib/: CMakeLists.txt
test/: CMakeLists.txt  ComplexityFeamyTests.cpp  ComplexityVeamyTests.cpp  CookTestMain.cpp  CylinderTestMain.cpp  DisplacementPatchTestMain.cpp  DisplacementPatchTestMainT3.cpp  EquilibriumPatchTestMain.cpp  FeamyCylinderTestMain.cpp  FeamyDisplacementPatchTestMain.cpp  FeamyDisplacementPatchTestMain2.cpp  FeamyEquilibriumPatchTestMain.cpp  FeamyEquilibriumTestMain.cpp  FeamyParabolicMain.cpp  FeamyParabolicMainNorms.cpp  FeamyPatchTestMain.cpp  FeamyTestMain.cpp  FeamyTestMainInitFromFile.cpp  ParabolicMain.cpp  ParabolicMainT3.cpp  ParabolicMainVEM.cpp  ParabolicMainVEMnorms.cpp  PoissonPatchTestMain.cpp  PoissonRightHandTestMain.cpp  PoissonSourceTestMain.cpp  PoissonSourceTestMainCreateFromFile.cpp  PoissonSourceTestMainInitFromFile.cpp  PolyMesherMain.cpp  PolyMesherMainT3.cpp  PolyMesherMain_Poisson.cpp  PolyMesherMain_Poisson_Base.cpp  UnicornTestMain.cpp  example.cpp  testveamer.cpp
test/feamy_tests/: FeamyCylinderTestMain.cpp  FeamyDisplacementPatchTestMain.cpp  FeamyEquilibriumPatchTestMain.cpp  FeamyEquilibriumTestMain.cpp  FeamyParabolicMain.cpp  FeamyPatchTestMain.cpp
test/mesh examples/: SquareMesh.txt  SquareWithHoleMesh.txt
test/norm_tests/: EquilibriumPatchTestFeamyCalculationTest.cpp  EquilibriumPatchTestFeamyMain.cpp  EquilibriumPatchTestVeamyCalculationTest.cpp  EquilibriumPatchTestVeamyMain.cpp  FeamyParabolicMain.cpp  ParabolicFeamyMain.cpp  ParabolicVeamyMain.cpp  PatchTestFeamyCalculationTest.cpp  PatchTestVeamyCalculationTest.cpp  VeamyParabolicMain.cpp
test/test_files/: equilibriumTest_mesh.txt  feamy_parabolic_main_norms_t3_hsize_008.txt  feamy_parabolic_main_norms_t3_hsize_01.txt  feamy_parabolic_main_norms_t3_hsize_015.txt  feamy_parabolic_main_norms_t3_hsize_018.txt  feamy_parabolic_main_norms_t3_hsize_03.txt  feamy_parabolic_main_norms_t3_hsize_04.txt  feamy_parabolic_main_norms_t3_hsize_06.txt  feamy_parabolic_main_norms_t3_hsize_08.txt  feamy_parabolic_main_norms_t3_hsize_2.txt  feamy_test_initfromfile.txt  parabolic_main_vem_norms_1000poly_elems.txt  parabolic_main_vem_norms_100poly_elems.txt  parabolic_main_vem_norms_20poly_elems.txt  parabolic_main_vem_norms_250poly_elems.txt  parabolic_main_vem_norms_3000poly_elems.txt  parabolic_main_vem_norms_50poly_elems.txt  poisson_mesh.txt  poisson_source_test_createfromfile.txt  poisson_source_test_initfromfile.txt  polymesher2veamy.txt  polymesher2veamy_poisson.txt  polymesher2veamy_simple.txt
veamy/: CMakeLists.txt
veamy/include/feamy/: Feamer.h
veamy/include/feamy/config/: FeamyConfig.h
veamy/include/feamy/integration/: AreaIntegrator.h  IntegrableFunction.h  LineIntegrator.h
veamy/include/feamy/models/: FeamyElement.h  FemElement.h
veamy/include/feamy/physics/: FeamyBodyForceVector.h  FeamyConditions.h  FeamyTractionVector.h
veamy/include/feamy/problem/: FeamyLinearElasticityDiscretization.h
veamy/include/veamy/: Calculator2D.h  Veamer.h
veamy/include/veamy/config/: VeamyConfig.h
veamy/include/veamy/geometry/: VeamyMesh.cpp  VeamyMesh.h  VeamyPolygon.h  VeamyTriangle.h
veamy/include/veamy/models/: Edge.h  Element.h  VeamyElement.h  VemElement.h
veamy/include/veamy/physics/: BodyForce.h  Conditions.h  (+9 more)
veamy/src/: Calculator2D.cpp  Veamer.cpp
veamy/src/config/: VeamyConfig.cpp
veamy/src/feamy/: Feamer.cpp
veamy/src/geometry/: VeamyPolygon.cpp  VeamyTriangle.cpp
veamy/src/models/: Edge.cpp  Element.cpp  VeamyElement.cpp  VemElement.cpp
veamy/src/physics/: BodyForceVector.cpp  Material.cpp  MaterialPlainStress.cpp  MaterialPlaneStrain.cpp  MaterialPlaneStress.cpp
veamy/src/postprocess/: ElasticityH1NormCalculator.cpp  H1NormCalculator.cpp  L2NormCalculator.cpp  NormCalculator.cpp
veamy/src/problems/: LinearElasticityDiscretization.cpp  PoissonDiscretization.cpp  ScalarProblem.cpp  VeamyLinearElasticityDiscretization.cpp  VeamyPoissonDiscretization.cpp  VectorialProblem.cpp
veamy/src/utilities/: FunctionComputable.cpp  veamy_functions.cpp
(+336 files in other folders)
